--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -11,19 +11,19 @@ server {
     }
 
     location /authors/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend:8000;
     }
     location /cities/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend:8000;
     }
     location /pubs/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend:8000;
     }
     location /bbks/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend:8000;
     }
     location /key_words/ {
-        proxy_pass http://backend;
+        proxy_pass http://backend:8000;
     }
     #error_page  404              /404.html;
 
