--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -24,6 +24,10 @@ server {
     location /key_words/ {
         proxy_pass http://backend:8000;
     }
+    location /api/v1/lib/book/ {
+        proxy_pass http://backend:8000;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
