--- a/task-03/docker-compose.yml
+++ b/task-03/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     #   - "c"
     volumes:
       - ./data/db:/var/lib/postgresql/data
+    ports:
+      - "8000:8000"      
     environment:
       - POSTGRES_DB=django
       - POSTGRES_USER=django
