--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -8,7 +8,9 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
-
+    location /admin/ {
+        proxy_pass http://backend:8000;
+    }
     location /authors/ {
         proxy_pass http://backend:8000;
     }
@@ -25,6 +27,9 @@ server {
         proxy_pass http://backend:8000;
     }
     location /api/v1/lib/book/ {
+        proxy_pass http://backend:8000;
+    }
+    location /api/v1/lib/bbk/ {
         proxy_pass http://backend:8000;
     }
 
