--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -9,30 +9,26 @@ server {
         index  index.html index.htm;
     }
     location /admin/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://192.168.97.76:8000;
     }
     location /authors/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://192.168.97.76:8000;
     }
     location /cities/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://192.168.97.76:8000;
     }
     location /pubs/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://192.168.97.76:8000;
     }
     location /bbks/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://192.168.97.76:8000;
     }
     location /key_words/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://192.168.97.76:8000;
     }
-    location /api/v1/lib/book/ {
-        proxy_pass http://backend:8000;
+    location /api/v1/lib/ {
+        proxy_pass http://192.168.97.76:8000;
     }
-    location /api/v1/lib/bbk/ {
-        proxy_pass http://backend:8000;
-    }
-
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
