--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -7,13 +7,13 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-    }
-    location /admin/ {
-        proxy_pass http://192.168.97.76:8000;
-    }
-    location /api/v1/lib/ {
-        proxy_pass http://192.168.97.76:8000;
-    }
+    # }
+    # location /admin/ {
+    #     proxy_pass http://192.168.97.76:8000;
+    # }
+    # location /api/v1/lib/ {
+    #     proxy_pass http://192.168.97.76:8000;
+    # }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
