--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -11,6 +11,10 @@ server {
     # location /admin/ {
     #     proxy_pass http://192.168.97.76:8000;
     # }
+    location /static/ {
+        root   /usr/share/nginx/html;
+    }
+    
     location /api/v1/lib/ {
 
         #proxy_redirect          http://192.168.97.76:8000/  /api/v1/lib/;
