--- a/task-03/frontend/default.conf
+++ b/task-03/frontend/default.conf
@@ -8,6 +8,11 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
+    
+    location / {
+      try_files $uri $uri/ /index.html;
+    }
+
     # location /admin/ {
     #     proxy_pass http://192.168.97.76:8000;
     # }
